# rtwr

./: .gitignore  CMakeLists.txt  LICENSE.rst  README.rst
doc/: README.rst  journal.txt  toc.rst
doc/report/: project2_report.tex
doc/report/bibliography/: p2_bibliography.bib
doc/report/text/: 1_introduction.tex  2_background.tex  3_methods.tex  4_applications.tex  4_results.tex  5_discussion.tex  6_conclusion.tex  title_page.tex
src/: CMakeLists.txt  Camera.cpp  Camera.h  FPSCounter.cpp  FPSCounter.h  Plane.cpp  Plane.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  fragment.frag  main.cpp  skybox.frag  skybox.vert  vertex.vert  water.frag  water.vert
